@@ -10,3 +10,4 @@ depcomp
 files.list
 install-sh
 missing
+libunwind-i386
